--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "shelljs": "0.7.8",
     "opn": "5.1.0",
     "js-md5": "^0.7.3",
+    "vee-validate":"^2.0.3",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "rimraf": "2.6.2",
