--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "rimraf": "2.6.2",
+    "vue-select": "2.4.0",
     "url-loader": "0.6.2",
     "vue-loader": "13.7.0",
     "vue-style-loader": "3.0.3",
