--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-standard": "3.0.1",
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
+    "echarts": "^4.0.4",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "friendly-errors-webpack-plugin": "1.6.1",
