--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-vue": "1.4.0",
     "flag-icon-css": "2.9.0",
     "font-awesome": "^4.7.0",
+    "glyphicons-halflings": "1.9.1",
     "simple-line-icons": "^2.4.1",
     "vue": "2.5.13",
     "vue-router": "3.0.1"
