--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "copy-webpack-plugin": "4.3.1",
     "chai": "4.1.2",
     "css-loader": "0.28.8",
+    "chromedriver": "2.34.1",
+    "cross-spawn": "5.1.0",
     "eslint": "4.15.0",
     "eslint-friendly-formatter": "3.0.0",
     "eslint-loader": "1.9.0",
@@ -53,6 +55,7 @@
     "eventsource-polyfill": "0.9.6",
     "express": "4.16.2",
     "echarts": "^4.0.4",
+    "element-ui":"2.4.0",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.6",
     "friendly-errors-webpack-plugin": "1.6.1",
@@ -75,8 +78,6 @@
     "inject-loader": "3.0.1",
     "babel-plugin-istanbul": "4.1.5",
     "phantomjs-prebuilt": "^2.1.16",
-    "chromedriver": "2.34.1",
-    "cross-spawn": "5.1.0",
     "nightwatch": "0.9.19",
     "node-sass": "4.7.2",
     "sass-loader": "6.0.6",
@@ -86,15 +87,16 @@
     "opn": "5.1.0",
     "js-md5": "^0.7.3",
     "jwt-decode": "2.2.0",
-    "vee-validate": "^2.0.3",
     "optimize-css-assets-webpack-plugin": "3.2.0",
     "ora": "1.3.0",
     "rimraf": "2.6.2",
-    "vue-select": "2.4.0",
     "url-loader": "0.6.2",
+    "vee-validate": "^2.0.3",
+    "vue-select": "2.4.0",
     "vue-loader": "13.7.0",
     "vue-style-loader": "3.0.3",
     "vue-template-compiler": "2.5.13",
+    "vue2-datepicker": "1.9.7",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.9.2",
     "webpack-dev-middleware": "2.0.4",
