--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "bootstrap": "4.0.0-beta.3",
-    "bootstrap-vue": "1.4.0",
-    "font-awesome": "^4.7.0",
+    "bootstrap": "4.1.3",
+    "bootstrap-vue": "1.5.1",
+    "font-awesome": "4.7.0",
     "glyphicons-halflings": "1.9.1",
-    "simple-line-icons": "^2.4.1",
-    "vue": "2.5.13",
+    "simple-line-icons": "2.4.1",
+    "vue": "2.5.17",
     "vue-router": "3.0.1"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.18.0",
     "autoprefixer": "7.2.4",
     "babel-core": "6.26.0",
     "babel-eslint": "8.2.1",
@@ -94,10 +94,9 @@
     "vue-select": "2.4.0",
     "vue-loader": "13.7.0",
     "vue-style-loader": "3.0.3",
-    "vue-template-compiler": "2.5.13",
+    "vue-template-compiler": "2.5.17",
     "vue2-datepicker": "1.9.7",
-    "webpack": "3.10.0",
-    "crypto-js": "3.1.9-1",
+    "webpack": "3.12.0",
     "webpack-bundle-analyzer": "2.9.2",
     "webpack-dev-middleware": "2.0.4",
     "webpack-hot-middleware": "2.21.0",
