--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@pioneer/vue",
   "version": "2.0.0",
-  "description": "Pioneer Education Administration",
+  "description": "Pioneer Central Portal",
   "author": "Shilei Lin",
   "homepage": "http://s1lin.github.io",
   "copyright": "Copyright 2018 Shilei Lin",
@@ -17,8 +17,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "bootstrap": "4.1.3",
-    "bootstrap-vue": "1.5.1",
+    "bootstrap": "4.2.1",
+    "bootstrap-vue": "2.0.0-rc.11",
     "font-awesome": "4.7.0",
     "glyphicons-halflings": "1.9.1",
     "simple-line-icons": "2.4.1",
